--- a/configuration/partials/emails/admin-approval-body.html
+++ b/configuration/partials/emails/admin-approval-body.html
@@ -76,8 +76,8 @@
   </style>
 </head>
 
-<body style="background-color:#F5F5F5;">
-  <div style="background-color:#F5F5F5;">
+<body style="background-color:#ebedfa;">
+  <div style="background-color:#ebedfa;">
     <!--[if mso | IE]>
       <table
          align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
