--- a/configuration/partials/emails/admin-await-approval-body.html
+++ b/configuration/partials/emails/admin-await-approval-body.html
@@ -76,8 +76,8 @@
   </style>
 </head>
 
-<body style="background-color:#F5F5F5;">
-  <div style="background-color:#F5F5F5;">
+<body style="background-color:#ebedfa;">
+  <div style="background-color:#ebedfa;">
     <!--[if mso | IE]>
       <table
          align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
@@ -89,7 +89,7 @@
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;">
         <tbody>
           <tr>
-            <td style="direction:ltr;font-size:0px;padding:10px;text-align:center;">
+            <td style="direction:ltr;font-size:0px;padding:0px;text-align:center;">
               <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 
@@ -99,12 +99,12 @@
               >
           
       <table
-         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:580px;" width="580"
+         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="background:{{@root.context.metaData.theme.secondary}};background-color:{{@root.context.metaData.theme.secondary}};margin:0px auto;max-width:580px;">
+              <div style="background:{{@root.context.metaData.theme.secondary}};background-color:{{@root.context.metaData.theme.secondary}};margin:0px auto;max-width:600px;">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:{{@root.context.metaData.theme.secondary}};background-color:{{@root.context.metaData.theme.secondary}};width:100%;">
                   <tbody>
                     <tr>
@@ -115,7 +115,7 @@
         <tr>
       
             <td
-               class="" style="vertical-align:top;width:580px;"
+               class="" style="vertical-align:top;width:600px;"
             >
           <![endif]-->
                         <div class="mj-column-per-100 outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
@@ -169,12 +169,12 @@
               >
           
       <table
-         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:580px;" width="580"
+         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="margin:0px auto;max-width:580px;">
+              <div style="margin:0px auto;max-width:600px;">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
                   <tbody>
                     <tr>
@@ -185,7 +185,7 @@
         <tr>
       
             <td
-               class="" style="vertical-align:top;width:580px;"
+               class="" style="vertical-align:top;width:600px;"
             >
           <![endif]-->
                         <div class="mj-column-per-100 outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
@@ -236,12 +236,12 @@
               >
           
       <table
-         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:580px;" width="580"
+         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="background:{{@root.context.metaData.theme.copyright}};background-color:{{@root.context.metaData.theme.copyright}};margin:0px auto;max-width:580px;">
+              <div style="background:{{@root.context.metaData.theme.copyright}};background-color:{{@root.context.metaData.theme.copyright}};margin:0px auto;max-width:600px;">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:{{@root.context.metaData.theme.copyright}};background-color:{{@root.context.metaData.theme.copyright}};width:100%;">
                   <tbody>
                     <tr>
@@ -252,7 +252,7 @@
         <tr>
       
             <td
-               class="" style="vertical-align:top;width:580px;"
+               class="" style="vertical-align:top;width:600px;"
             >
           <![endif]-->
                         <div class="mj-column-per-100 outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
@@ -262,7 +262,7 @@
                                 <td style="vertical-align:top;padding:10px;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                                     <tr>
-                                      <td align="left" style="font-size:0px;padding:0px 0px 15px;word-break:break-word;">
+                                      <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:14px;line-height:1;text-align:left;color:#333E48;">
                                           <p> This email was automatically generated by the <a href="{{@root.context.metaData.url}}" title="{{@root.context.metaData.title}}" target="_blank">{{@root.context.metaData.title}}</a> website. </p>
                                         </div>
